// Vitest Snapshot v1

exports[`Memory > should create a tx with a signature and then append further signature 1`] = `
[
  {
    "hash": "0a05312e302e3012606161646437613638366137343034383737633338663064333433373136663864316337316165383531353930323438353333353232386232353936383966313663353036643663353731323238633234666365656234326362376632666337621a09726563697069656e7420012801321b0a0768616e646c6572120776657273696f6e1a076e6574776f726b",
    "muSig": {
      "m": 2,
      "master": "aadd7a686a7404877c38f0d343716f8d1c71ae8515902485335228b259689f16c506d6c571228c24fceeb42cb7f2fc7b",
      "n": 3,
      "slaves": [
        "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
        "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
      ],
    },
    "signatures": [
      {
        "id": "4bf94d385ec00d23a652717e384e1856d267dc8469092cd0d0d7b992a936976a",
        "privateKey": "0af283be3ba696060636c0790d967380e8aff1e46d3d50c54fbd035b5ce3fa11",
        "publicKey": "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "signature": "928564eb2358b0b30836dd6ca6e60c4ead04e914933ace89196417d57c39e31ffcea381ad686f6bb52d8f9833d4da933084103e7d1717d9863122488f2b63ed106906250d08a00f95a4eeedf57ff86aa7388efa61e94c311ca7d1e70fbfe6375",
      },
    ],
    "timestamp": 1652102041,
  },
]
`;

exports[`Memory > should create a tx with a signature and then append further signature 2`] = `
[
  {
    "hash": "0a05312e302e3012606161646437613638366137343034383737633338663064333433373136663864316337316165383531353930323438353333353232386232353936383966313663353036643663353731323238633234666365656234326362376632666337621a09726563697069656e7420012801321b0a0768616e646c6572120776657273696f6e1a076e6574776f726b",
    "muSig": {
      "m": 2,
      "master": "aadd7a686a7404877c38f0d343716f8d1c71ae8515902485335228b259689f16c506d6c571228c24fceeb42cb7f2fc7b",
      "n": 3,
      "slaves": [
        "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
        "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
      ],
    },
    "signatures": [
      {
        "id": "4bf94d385ec00d23a652717e384e1856d267dc8469092cd0d0d7b992a936976a",
        "privateKey": "0af283be3ba696060636c0790d967380e8aff1e46d3d50c54fbd035b5ce3fa11",
        "publicKey": "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "signature": "928564eb2358b0b30836dd6ca6e60c4ead04e914933ace89196417d57c39e31ffcea381ad686f6bb52d8f9833d4da933084103e7d1717d9863122488f2b63ed106906250d08a00f95a4eeedf57ff86aa7388efa61e94c311ca7d1e70fbfe6375",
      },
      {
        "id": "09bba3b4ea213f652d4718747622aeb2e17846c79ed8bc15a6ea18135f94e4e3",
        "privateKey": "2755b1a9723ab1be5ea841c6270054f5d3f48322f76c9d1c9225d18c0c824d94",
        "publicKey": "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
        "signature": "af0448ced582139acffa9ef65db6a8f4cbcd473dab7c818dd888fc336eca7544d7436012acd6863ae62dd86123044ca3080d6c6b1034f4de6bb0578be0b945335821f592fffb197fb8c38ff1e9ec4bd4fe04427cc58a511b6e581db310ee7fb6",
      },
    ],
    "timestamp": 1652102041,
  },
]
`;

exports[`Memory > should create a tx with a signature and then append further signature 3`] = `
[
  {
    "hash": "0a05312e302e3012606161646437613638366137343034383737633338663064333433373136663864316337316165383531353930323438353333353232386232353936383966313663353036643663353731323238633234666365656234326362376632666337621a09726563697069656e7420012801321b0a0768616e646c6572120776657273696f6e1a076e6574776f726b",
    "muSig": {
      "m": 2,
      "master": "aadd7a686a7404877c38f0d343716f8d1c71ae8515902485335228b259689f16c506d6c571228c24fceeb42cb7f2fc7b",
      "n": 3,
      "slaves": [
        "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
        "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
      ],
    },
    "signatures": [
      {
        "id": "4bf94d385ec00d23a652717e384e1856d267dc8469092cd0d0d7b992a936976a",
        "privateKey": "0af283be3ba696060636c0790d967380e8aff1e46d3d50c54fbd035b5ce3fa11",
        "publicKey": "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "signature": "928564eb2358b0b30836dd6ca6e60c4ead04e914933ace89196417d57c39e31ffcea381ad686f6bb52d8f9833d4da933084103e7d1717d9863122488f2b63ed106906250d08a00f95a4eeedf57ff86aa7388efa61e94c311ca7d1e70fbfe6375",
      },
      {
        "id": "09bba3b4ea213f652d4718747622aeb2e17846c79ed8bc15a6ea18135f94e4e3",
        "privateKey": "2755b1a9723ab1be5ea841c6270054f5d3f48322f76c9d1c9225d18c0c824d94",
        "publicKey": "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
        "signature": "af0448ced582139acffa9ef65db6a8f4cbcd473dab7c818dd888fc336eca7544d7436012acd6863ae62dd86123044ca3080d6c6b1034f4de6bb0578be0b945335821f592fffb197fb8c38ff1e9ec4bd4fe04427cc58a511b6e581db310ee7fb6",
      },
      {
        "id": "267d857c3a01f739055a34028f1c2051769b0ead4ef33a0eeea06be81a8ba503",
        "privateKey": "36aa2cd61677af51081c07166eca89a2117b2579a4efb26ae8f18fa7d69b7c99",
        "publicKey": "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
        "signature": "b365f6cb603596a23520f3875659aa2d59a3af115f73c6479343a6b37b84bd92ebfe42db46e335dd058a809df18999c717bdc9dbba49aeb894e52e17517dee6ee9a268665323edaeec32bd5fde1f351ba99feacbd8e9444f43643f59e0a3d867",
      },
    ],
    "timestamp": 1652102041,
  },
]
`;

exports[`Memory > should remove all txs 1`] = `
[
  {
    "hash": "0a05312e302e3012606161646437613638366137343034383737633338663064333433373136663864316337316165383531353930323438353333353232386232353936383966313663353036643663353731323238633234666365656234326362376632666337621a09726563697069656e7420012801321b0a0768616e646c6572120776657273696f6e1a076e6574776f726b",
    "muSig": {
      "m": 2,
      "master": "aadd7a686a7404877c38f0d343716f8d1c71ae8515902485335228b259689f16c506d6c571228c24fceeb42cb7f2fc7b",
      "n": 3,
      "slaves": [
        "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
        "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
      ],
    },
    "signatures": [
      {
        "id": "4bf94d385ec00d23a652717e384e1856d267dc8469092cd0d0d7b992a936976a",
        "privateKey": "0af283be3ba696060636c0790d967380e8aff1e46d3d50c54fbd035b5ce3fa11",
        "publicKey": "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "signature": "928564eb2358b0b30836dd6ca6e60c4ead04e914933ace89196417d57c39e31ffcea381ad686f6bb52d8f9833d4da933084103e7d1717d9863122488f2b63ed106906250d08a00f95a4eeedf57ff86aa7388efa61e94c311ca7d1e70fbfe6375",
      },
    ],
    "timestamp": 1652102041,
  },
]
`;

exports[`Memory > should restore all txs 1`] = `
[
  {
    "hash": "0a05312e302e3012606161646437613638366137343034383737633338663064333433373136663864316337316165383531353930323438353333353232386232353936383966313663353036643663353731323238633234666365656234326362376632666337621a09726563697069656e7420012801321b0a0768616e646c6572120776657273696f6e1a076e6574776f726b",
    "muSig": {
      "m": 2,
      "master": "aadd7a686a7404877c38f0d343716f8d1c71ae8515902485335228b259689f16c506d6c571228c24fceeb42cb7f2fc7b",
      "n": 3,
      "slaves": [
        "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
        "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
      ],
    },
    "signatures": [
      {
        "id": "4bf94d385ec00d23a652717e384e1856d267dc8469092cd0d0d7b992a936976a",
        "privateKey": "0af283be3ba696060636c0790d967380e8aff1e46d3d50c54fbd035b5ce3fa11",
        "publicKey": "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "signature": "928564eb2358b0b30836dd6ca6e60c4ead04e914933ace89196417d57c39e31ffcea381ad686f6bb52d8f9833d4da933084103e7d1717d9863122488f2b63ed106906250d08a00f95a4eeedf57ff86aa7388efa61e94c311ca7d1e70fbfe6375",
      },
    ],
    "timestamp": 1652102041,
  },
]
`;

exports[`Memory > should restore all txs 2`] = `
[
  {
    "hash": "0a05312e302e3012606161646437613638366137343034383737633338663064333433373136663864316337316165383531353930323438353333353232386232353936383966313663353036643663353731323238633234666365656234326362376632666337621a09726563697069656e7420012801321b0a0768616e646c6572120776657273696f6e1a076e6574776f726b",
    "muSig": {
      "m": 2,
      "master": "aadd7a686a7404877c38f0d343716f8d1c71ae8515902485335228b259689f16c506d6c571228c24fceeb42cb7f2fc7b",
      "n": 3,
      "slaves": [
        "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
        "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
      ],
    },
    "signatures": [
      {
        "id": "4bf94d385ec00d23a652717e384e1856d267dc8469092cd0d0d7b992a936976a",
        "privateKey": "0af283be3ba696060636c0790d967380e8aff1e46d3d50c54fbd035b5ce3fa11",
        "publicKey": "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "signature": "928564eb2358b0b30836dd6ca6e60c4ead04e914933ace89196417d57c39e31ffcea381ad686f6bb52d8f9833d4da933084103e7d1717d9863122488f2b63ed106906250d08a00f95a4eeedf57ff86aa7388efa61e94c311ca7d1e70fbfe6375",
      },
    ],
    "timestamp": 1652102041,
  },
]
`;

exports[`Memory > should restore all txs 3`] = `
[
  {
    "hash": "0a05312e302e3012606161646437613638366137343034383737633338663064333433373136663864316337316165383531353930323438353333353232386232353936383966313663353036643663353731323238633234666365656234326362376632666337621a09726563697069656e7420012801321b0a0768616e646c6572120776657273696f6e1a076e6574776f726b",
    "muSig": {
      "m": 2,
      "master": "aadd7a686a7404877c38f0d343716f8d1c71ae8515902485335228b259689f16c506d6c571228c24fceeb42cb7f2fc7b",
      "n": 3,
      "slaves": [
        "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
        "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
      ],
    },
    "signatures": [
      {
        "id": "4bf94d385ec00d23a652717e384e1856d267dc8469092cd0d0d7b992a936976a",
        "privateKey": "0af283be3ba696060636c0790d967380e8aff1e46d3d50c54fbd035b5ce3fa11",
        "publicKey": "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "signature": "928564eb2358b0b30836dd6ca6e60c4ead04e914933ace89196417d57c39e31ffcea381ad686f6bb52d8f9833d4da933084103e7d1717d9863122488f2b63ed106906250d08a00f95a4eeedf57ff86aa7388efa61e94c311ca7d1e70fbfe6375",
      },
    ],
    "timestamp": 1652102041,
  },
]
`;
